--- a/test/static/styles/style.css
+++ b/test/static/styles/style.css
@@ -5,3 +5,52 @@ span {
 p {
     font-family:Arial; font-size: 14px;
 }
+
+.list-container {
+    display: inline-block;
+    border-style: solid;
+    border-width: 0.3px;
+    padding-right: 20px;
+}
+
+.list-container>p {
+    text-align: center;
+    font-weight: bold;
+}
+
+.img-container {
+    float: right;
+    border-style:solid;
+    border-width: 0.3px;
+    padding: 5px;
+    margin-left: 10px;
+    text-align: center;
+}
+
+.img-container>div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+li {
+    font-family: Arial;
+    font-size: 14px;
+}
+
+.img-container>p {
+    background-color: aquamarine;
+    margin-top: 2px;
+}
+
+th {
+    font-family: Arial;
+    font-size: 14px;
+    padding-top: 5px;
+}
+
+td {
+    font-family: Arial;
+    font-size: 14px;
+    padding-top: 5px;
+}
